# synergy-algo-project

./: CMakeLists.txt  CMakePresets.json  settings.json
Game/: Board.h  Config.h  Game.h  Hand.h  Logic.h
Models/: Move.h  Response.h
